// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly encodes Functions 1`] = `
Array [
  [Function],
]
`;

exports[`correctly encodes a HTMLElement 1`] = `
Array [
  <html>
    <head>
      <style
        data-emotion=""
        type="text/css"
      />
    </head>
    <body />
  </html>,
]
`;

exports[`correctly encodes nested values 1`] = `
Array [
  Object {
    "document": <html>
      <head>
        <style
          data-emotion=""
          type="text/css"
        />
      </head>
      <body />
    </html>,
    "function": [Function],
    "nested": Array [
      Array [
        Array [
          Object {
            "constructor": Object {
              "name": "Promise",
            },
          },
        ],
      ],
    ],
    "recursive": [Circular],
  },
]
`;

exports[`decodes messages 1`] = `
Array [
  "test",
]
`;

exports[`disables encoding with a flag 1`] = `
Object {
  "data": Array [
    Object {
      "document": <html>
        <head>
          <style
            data-emotion=""
            type="text/css"
          >
            
          </style>
        </head>
        <body />
      </html>,
      "function": [Function],
      "nested": Array [
        Array [
          Array [
            Promise {},
          ],
        ],
      ],
      "recursive": [Circular],
    },
  ],
  "id": "877b8da6-e1d6-fc09-9ec5-3d51-1555666038411",
  "method": "debug",
}
`;
